--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
   <div id="title">mission accomplished</div>
 
   <button id="loginbutton">Login</button>
   <button id="signupbutton">Signup</button>
 
-  <div class="popup-overlay" id="loginPopup" onclick="closePopup(event, 'loginPopup')">
+  <div class="popup-overlay" id="loginPopup">
     <div class="popup-box" onclick="event.stopPropagation()">
       <h2>Login</h2>
-      <input type="text" placeholder="Username" id="username">
-      <input type="password" placeholder="Password" id="password">
+      <input type="text" placeholder="Username" id="loginusername">
+      <input type="password" placeholder="Password" id="loginpassword">
       <button id="submitlogin">Submit</button>
     </div>
   </div>
 
-  <div class="popup-overlay" id="signupPopup" onclick="closePopup(event, 'signupPopup')">
+  <div class="popup-overlay" id="signupPopup">
     <div class="popup-box" onclick="event.stopPropagation()">
       <h2>Signup</h2>
-      <input type="text" placeholder="Username" id="signup-username">
-      <input type="password" placeholder="Password" id="signup-password">
-      <input type="password" placeholder="Confirm Password" id="signup-confirm-password">
+      <input type="text" placeholder="Username" id="signupusername">
+      <input type="password" placeholder="Password" id="signuppassword">
+      <input type="password" placeholder="Confirm Password" id="signupconfirmpassword">
       <button id="submitsignup">Submit</button>
     </div>
   </div>
+
   <div id="q1">have an account?</div>
-  <div id="q2">don't have an acoount? create one</div>
+  <div id="q2">don't have an account? create one</div>
   <div id="s1">welcome to my site!</div>
-  <p id="s2">this site lets you orgenize your tasks, it can be daily tasks that you do through your day 
-    or it can be a big event that you got coming up.<br> it doesnt matter!
-    all your tasks can be efficiently
-    orgeniezed inside a journal that you can access to from every device. </p>
+  <p id="s2">
+    this site lets you organize your tasks.<br> It can be daily tasks that you do through your day,
+    or it can be a big event that you got coming up. <br>It doesn't matter!
+    All your tasks can be efficiently
+    organized inside a journal that you can access from every device.
+  </p>
 
-
-
-  <script src="index.js"></script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
