--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <div id="title">mission accomplished</div>
+  <div id="title">goated calander</div>
 
   <button id="loginbutton">Login</button>
   <button id="signupbutton">Signup</button>
