--- a/website/pages/loahshana.html
+++ b/website/pages/loahshana.html
@@ -93,17 +93,18 @@
             height: 70px;
             width: 100px;
             font-size: 30px;
+            left: -627px;
+            bottom: 70px;
         }
     </style>
 </head>
 
 <body>
     <h1>"Your" Calendar</h1>
-    <button id="savebutton">save</button>
 
     <table>
         <tr>
-            <th>week num</th>
+            <th>week number</th>
             <th>Sunday</th>
             <th>Monday</th>
             <th>Tuesday</th>
@@ -122,6 +123,8 @@
             <td></td>
             <td></td>
         </tr>
+        <button id="savebutton">save</button>
+
     </table>
     <textarea id="textarea1"></textarea>
     <textarea id="textarea2"></textarea>
@@ -130,6 +133,8 @@
     <textarea id="textarea5"></textarea>
     <textarea id="textarea6"></textarea>
     <textarea id="textarea7"></textarea>
+
+
 
 
 </body>
