--- a/website/pages/loahshana.html
+++ b/website/pages/loahshana.html
@@ -88,13 +88,21 @@
             top: -492px;
             left: 74px;
         }
-        #savebutton{
+
+        #savebutton {
             position: relative;
             height: 70px;
             width: 100px;
             font-size: 30px;
             left: -627px;
             bottom: 70px;
+        }
+
+        #weekselect {
+            position: relative;
+            width: 100px;
+            top: 130px;
+            right: 640px;
         }
     </style>
 </head>
@@ -124,6 +132,7 @@
             <td></td>
         </tr>
         <button id="savebutton">save</button>
+        <select id="weekselect"></select>
 
     </table>
     <textarea id="textarea1"></textarea>
@@ -134,9 +143,7 @@
     <textarea id="textarea6"></textarea>
     <textarea id="textarea7"></textarea>
 
-
-
-
+    <script src="loahshana.js" type="module"></script>
 </body>
 
 </html>
