--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div id="title">goated calander</div>
+  <div id="title">no title yet</div>
 
   <button id="loginbutton">Login</button>
   <button id="signupbutton">Signup</button>
