--- a/website/pages/loahshana.html
+++ b/website/pages/loahshana.html
@@ -14,6 +14,7 @@
         <label for="weekselect">Week:</label>
         <select id="weekselect"></select>
     </div>
+    <button id="logoutbutton">logout</button>
 
     <div class="calendar-grid">
         <div class="day-label">Sunday</div>
