--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -30,6 +30,9 @@
     </div>
   </div>
 
+  <div id="qmark">❔</div>
+
+
   <div id="s1">welcome to my site!</div>
   <script src="index.js" type="module"></script>
 </body>
