--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div id="title">no title yet</div>
+  <div id="title">calander.io</div>
 
   <button id="loginbutton">Login</button>
   <button id="signupbutton">Signup</button>
@@ -31,6 +31,18 @@
   </div>
 
   <div id="qmark">❔</div>
+
+  <div id="qpopup" class="popup-overlay">
+    <div class="popup-box" onclick="event.stopPropagation()">
+      <h1>about us</h1>
+      <div id="qdiv1">
+        this site lets you efficiently organize your tasks throughout the year
+        <br>
+        you can log into it from everywhere that you want!
+      </div>
+      <button id="closeqbutton">Close</button>
+    </div>
+  </div>
 
 
   <div id="s1">welcome to my site!</div>
