--- a/website/pages/loahshana.html
+++ b/website/pages/loahshana.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <h1>"Your" Calendar</h1>
+    <h1>Your Calendar</h1>
 
     <div class="controls">
         <label for="weekselect">Week:</label>
         <select id="weekselect"></select>
     </div>
-    <button id="logoutbutton">logout</button>
+    <button onclick="logout() " id="logoutbutton">logout</button>
 
     <div class="calendar-grid">
         <div class="day-label">Sunday</div>
