finished the projact

--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -17,6 +17,8 @@
       <input type="text" placeholder="Username" id="loginusername">
       <input type="password" placeholder="Password" id="loginpassword">
       <button id="submitlogin">Submit</button>
+      <button id="cancellogin">cancel</button>
+
     </div>
   </div>
 
@@ -27,6 +29,9 @@
       <input type="password" placeholder="Password" id="signuppassword">
       <input type="password" placeholder="Confirm Password" id="signupconfirmpassword">
       <button id="submitsignup">Submit</button>
+      <button id="cancelsignup">cancel</button>
+
+
     </div>
   </div>
 
