--- a/website/pages/loahshana.html
+++ b/website/pages/loahshana.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Your Calendar</h1>
+    <h1 id="calendarTitle">Your Calendar</h1>
 
     <div class="controls">
         <label for="weekselect">Week:</label>
