now i def finished

--- a/website/pages/loahshana.html
+++ b/website/pages/loahshana.html
@@ -13,7 +13,18 @@
     <div class="controls">
         <label for="weekselect">Week:</label>
         <select id="weekselect"></select>
+
+        <label for="weekmood">How do you feel this week?</label>
+        <select id="weekmood">
+            <option value="0">Select mood</option>
+            <option value="1">1 - Very bad</option>
+            <option value="2">2 - Bad</option>
+            <option value="3">3 - Neutral</option>
+            <option value="4">4 - Good</option>
+            <option value="5">5 - Very good</option>
+        </select>
     </div>
+
     <button onclick="logout() " id="logoutbutton">logout</button>
 
     <div class="calendar-grid">
