added more things

--- a/website/pages/loahshana.html
+++ b/website/pages/loahshana.html
@@ -45,6 +45,8 @@
         <textarea id="textarea7"></textarea>
     </div>
     <p id="estimated-month" class="estimated-month">Estimated Month: —</p>
+    <p id="mood-face" class="mood-face"></p>
+
 
 
 
